--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "next": "16.0.7",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
